Updating to the new version of Isula